cambios significativos en todo el proyecto

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       name="description"
       content="tu refugio de lujo a pocos metros de la playa."
     />
+    <!-- LINK FAVICON -->
     <link
       rel="shortcut icon"
-      href="./multimedia/img/logo-joaquina.png"
+      href="./multimedia/img/logo-elysium.jpeg"
       type="image/x-icon"
     />
     <!-- LINK BOOTSTRAP -->
@@ -25,23 +26,24 @@
     />
     <!-- LINK CSS -->
 
-    <link rel="stylesheet" href="./styles/main.css" />
-    <title>Joaquina Beach</title>
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <title>ELYSIUM</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
+      <nav class="navbar navbar-expand-lg barra">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
               class="navb-img"
-              src="./multimedia/img/logo-joaquina.png"
-              alt="logo-la-joaquina"
+              src="./multimedia/img/logo-elysium.jpeg"
+              alt="logo-elysium"
             />
           </a>
 
           <button
-            class="navbar-toggler"
+            class="navbar-toggler toggler-color"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -66,7 +68,7 @@
                 <a class="nav-link" href="./pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/tarifas.html">NOSOTROS</a>
+                <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./pages/galeria.html">GALERIA</a>
@@ -85,9 +87,11 @@
     <main>
       <section class="banner-container">
         <div class="banner-info">
-          <h1>Todo lo que puedes imaginar...</h1>
-          <p>Lo hacemos realidad</p>
-          <a href="./pages/reservas.html">hace tu reserva</a>
+          <h1 class="titulo-banner">Tu destino de relax</h1>
+
+          <a class="button-home" href="./pages/reservas.html"
+            >hace tu reserva</a
+          >
         </div>
       </section>
     </main>
