--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,9 +11,10 @@
       name="description"
       content="vistas panorámicas, el entorno natural que nos rodea y los detalles de diseño que hacen que nuestro hotel sea único."
     />
+    <!-- LINK FAVICON -->
     <link
       rel="shortcut icon"
-      href="./multimedia/img/logo-joaquina.png"
+      href="../multimedia/img/logo-elysium.jpeg"
       type="image/x-icon"
     />
     <!-- LINK BOOTSTRAP -->
@@ -23,21 +24,23 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <!-- LINK CSS -->
     <link rel="stylesheet" href="../styles/index.css" />
-    <title>Joaquina Beach</title>
+    <link rel="stylesheet" href="/css/main.css" />
+    <title>ELYSIUM</title>
   </head>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
+    <nav class="navbar navbar-expand-lg barra">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../">
+        <a class="navbar-brand" href="#">
           <img
-            src="../multimedia/img/logo-joaquina.png"
+            class="navb-img"
+            src="../multimedia/img/logo-elysium.jpeg"
             alt="logo-la-joaquina"
           />
         </a>
+
         <button
-          class="navbar-toggler"
+          class="navbar-toggler toggler-color"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -62,7 +65,7 @@
               <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../pages/tarifas.html">NOSOTROS</a>
+              <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
@@ -78,12 +81,13 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class="main-galeria">
+    <h1>Galeria de fotos</h1>
     <section class="container-galeria">
       <div class="galeria-img">
         <img
           class="card-front"
-          src="../multimedia/fotos/reposera-3.jpg"
+          src="../multimedia/fotos/reposera-1.jpg"
           alt="area-de-relax"
         />
         <img
@@ -91,7 +95,7 @@
           src="../multimedia/fotos/reposera-2.jpg"
           alt="area-de-relax"
         />
-        <p>RELAX</p>
+        <!-- <p>RELAX</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -104,7 +108,7 @@
           src="../multimedia/fotos/desayuno-2.jpg"
           alt="servicio-de-desayuno-artesanal"
         />
-        <p>DESAYUNO ARTESANAL</p>
+        <!-- <p>DESAYUNO ARTESANAL</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -117,7 +121,7 @@
           src="../multimedia/fotos/spa-2.jpg"
           alt="sala-de-spa"
         />
-        <p>SPA</p>
+        <!-- <p>SPA</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -130,7 +134,7 @@
           src="../multimedia/fotos/habit-2.jpg"
           alt="area-de-masajes"
         />
-        <p>HABITACIONES</p>
+        <!-- <p>HABITACIONES</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -143,7 +147,7 @@
           src="../multimedia/fotos/comedor-2.jpg"
           alt="restaurant-desayuno-almuerzo"
         />
-        <p>RESTAURANT</p>
+        <!-- <p>RESTAURANT</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -156,7 +160,7 @@
           src="../multimedia/fotos/hotel-1.jpg"
           alt="imagenes-del-complejo"
         />
-        <p>COMPLEJO</p>
+        <!-- <p>COMPLEJO</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -169,37 +173,36 @@
           src="../multimedia/fotos/buceo-2.jpg"
           alt="imagenes-de-las-actividades-acuaticas"
         />
-        <p>ACTIVIDADES</p>
+        <!-- <p>ACTIVIDADES</p> -->
+      </div>
+      <div class="galeria-img">
+        <img
+          class="card-back"
+          src="../multimedia/fotos/piscina-1.jpg"
+          alt="desayuno-artesanal"
+        />
+        <img
+          class="card-front"
+          src="../multimedia/fotos/piscina-2.jpg"
+          alt="imagen-de-la-piscina"
+        />
+        <!-- <p>PISCINA</p> -->
       </div>
       <div class="galeria-img">
         <img
           class="card-front"
-          src="../multimedia/fotos/desayuno-1.jpg"
+          src="../multimedia/fotos/vista-al-mar-2.jpg"
           alt="desayuno-artesanal"
         />
         <img
           class="card-back"
-          src="../multimedia/fotos/desayuno-2.jpg"
-          alt="desayuno-artesanal"
-        />
-        <p>PISCINA</p>
-      </div>
-      <div class="galeria-img">
-        <img
-          class="card-front"
-          src="../multimedia/fotos/spa-1.jpg"
+          src="../multimedia/fotos/vista-al-mar-1.jpeg"
           alt="imagen-de-la-piscina"
         />
-        <img
-          class="card-back"
-          src="../multimedia/fotos/spa-2.jpg"
-          alt="imagen-de-la-piscina"
-        />
-        <p>SERVICIOS</p>
+        <!-- <p>SERVICIOS</p> -->
       </div>
     </section>
   </main>
-
   <footer>
     <h5>NUESTRAS REDES SOCIALES</h5>
     <ul>
