--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -11,6 +11,14 @@
       name="description"
       content=" Ofertas exclusivas. Realiza la reserva en nuestro hotel junto a la playa."
     />
+
+    <!-- LINK FAVICON -->
+    <link
+      rel="shortcut icon"
+      href="../multimedia/img/logo-elysium.jpeg"
+      type="image/x-icon"
+    />
+
     <!-- LINK BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -20,21 +28,24 @@
     />
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../styles/index.css" />
-    <link rel="stylesheet" href="../scss/main.scss" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/main.css" />
+
+    <title>ELYSIUM</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary navbar">
+      <nav class="navbar navbar-expand-lg barra">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../">
+          <a class="navbar-brand" href="#">
             <img
-              src="../multimedia/img/logo-joaquina.png"
-              alt="logo-la-joaquina"
+              class="navb-img"
+              src="../multimedia/img/logo-elysium.jpeg"
+              alt="logo-elysium"
             />
           </a>
+
           <button
-            class="navbar-toggler"
+            class="navbar-toggler toggler-color"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -51,14 +62,15 @@
                   class="nav-link active"
                   aria-current="page"
                   href="../index.html"
-                  >HOME</a
                 >
+                  HOME
+                </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/servicios.html">SERVICIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/tarifas.html">NOSOTROS</a>
+                <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../pages/galeria.html">GALERIA</a>
@@ -76,13 +88,9 @@
     </header>
     <main>
       <section class="form-container">
-        <h1>Joaquina <span> Beach</span></h1>
+        <h1 class="form-1 titulo">Hace tu reserva</h1>
         <div class="form-datos">
           <form class="formulario">
-            <div class="form-1 titulo">
-              <h3>Hace tu reserva</h3>
-            </div>
-
             <div class="form-2 desde">
               <label for="desde">
                 <p>Desde</p>
@@ -199,7 +207,7 @@
             <ul>
               <li>
                 <iconify-icon icon="line-md:map-marker-filled"></iconify-icon>
-                Garibaldi 23, Florianópolis
+                Pavon 23, Brasil
               </li>
               <li>
                 <iconify-icon icon="lets-icons:phone-fill"></iconify-icon>
@@ -207,21 +215,24 @@
               </li>
               <li>
                 <iconify-icon icon="fontisto:email"></iconify-icon>
-                joaquina.b@hotel.com
+                elisium.b@hotel.com
               </li>
             </ul>
           </div>
         </div>
-        <iframe
-          class="maps"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28276.145475821224!2d-48.48067063213793!3d-27.639435267221405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273c7a45caaf1b%3A0x45ba08dd85a69075!2sJoaquina%20Beach%20Hotel!5e0!3m2!1ses-419!2sar!4v1702488788922!5m2!1ses-419!2sar"
-          width="600"
-          height="120"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+        <div class="ubicacion">
+          <h3>Inmejorable ubicación</h3>
+          <iframe
+            class="maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28276.145475821224!2d-48.48067063213793!3d-27.639435267221405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273c7a45caaf1b%3A0x45ba08dd85a69075!2sJoaquina%20Beach%20Hotel!5e0!3m2!1ses-419!2sar!4v1702488788922!5m2!1ses-419!2sar"
+            width="600"
+            height="120"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </section>
     </main>
     <footer>
