pasando a scss la seccion de nosotros y galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -82,7 +82,7 @@
     </nav>
   </header>
   <main class="main-galeria">
-    <h1>Galeria de fotos</h1>
+    <h1 class="titulo-galeria">Galeria de fotos</h1>
     <section class="container-galeria">
       <div class="galeria-img">
         <img
