--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,7 +30,7 @@
     <!-- LINK CSS -->
 
     <link rel="stylesheet" href="../styles/index.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <title>ELYSIUM</title>
   </head>
