--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -29,7 +29,7 @@
 
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../styles/index.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <title>ELYSIUM</title>
   </head>
