pasado a scss todas las secciones

--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -86,28 +86,28 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main-reservas">
       <section class="form-container">
         <h1 class="form-1 titulo">Hace tu reserva</h1>
         <div class="form-datos">
           <form class="formulario">
             <div class="form-2 desde">
               <label for="desde">
-                <p>Desde</p>
+                <p class="form-reserva">Desde</p>
                 <input type="date" name="desde" id="desde" required />
               </label>
             </div>
 
             <div class="form-3 hasta">
               <label for="hasta">
-                <p>Hasta</p>
+                <p class="form-reserva">Hasta</p>
                 <input type="date" name="hasta" id="hasta" required />
               </label>
             </div>
 
             <div class="form-4 menores">
               <label for="menores">
-                <p>Menores</p>
+                <p class="form-reserva">Menores</p>
                 <input
                   type="number"
                   name="menores"
@@ -121,7 +121,7 @@
 
             <div class="form-5 adultos">
               <label for="adultos">
-                <p>Adultos</p>
+                <p class="form-reserva">Adultos</p>
                 <input
                   type="number"
                   name="adultos"
@@ -135,7 +135,7 @@
 
             <div class="form-6 nombre">
               <label for="nombre">
-                <p>Nombre</p>
+                <p class="form-reserva">Nombre</p>
                 <input
                   type="text"
                   name="nombre"
@@ -149,7 +149,7 @@
 
             <div class="form-7 apellido">
               <label for="apellido">
-                <p>Apellido</p>
+                <p class="form-reserva">Apellido</p>
                 <input
                   type="text"
                   name="apellido"
@@ -163,7 +163,7 @@
 
             <div class="form-8 tel">
               <label for="tel">
-                <p>Teléfono</p>
+                <p class="form-reserva">Teléfono</p>
                 <input
                   type="tel"
                   name="tel"
@@ -177,7 +177,7 @@
 
             <div class="form-9 email">
               <label for="email">
-                <p>Mail</p>
+                <p class="form-reserva">Mail</p>
                 <input
                   type="email"
                   name="email"
