--- a/index.html
+++ b/index.html
@@ -96,11 +96,14 @@
       </section>
     </main>
     <footer>
-      <h5>NUESTRAS REDES SOCIALES</h5>
-      <ul>
-        <li>
-          <a href="#"
-            ><iconify-icon icon="skill-icons:twitter"></iconify-icon
+      <h5 class="footer-subtitulo">NUESTRAS REDES SOCIALES</h5>
+      <ul class="footer-redes">
+        <li class="redes">
+          <a class="enlace-redes" href="#"
+            ><iconify-icon
+              class="footer-icon"
+              icon="skill-icons:twitter"
+            ></iconify-icon
           ></a>
         </li>
         <li>
@@ -113,7 +116,7 @@
         </li>
       </ul>
 
-      <p>Derechos reservados 2023</p>
+      <p class="footer-derechos">Derechos reservados 2023</p>
     </footer>
     <!-- SCRIP ICONIFY -->
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
