Creando listas y mixin

--- a/index.html
+++ b/index.html
@@ -106,13 +106,21 @@
             ></iconify-icon
           ></a>
         </li>
-        <li>
-          <a href="#"
-            ><iconify-icon icon="skill-icons:instagram"></iconify-icon
+        <li class="redes">
+          <a class="enlace-redes" href="#"
+            ><iconify-icon
+              class="footer-icon"
+              icon="skill-icons:instagram"
+            ></iconify-icon
           ></a>
         </li>
-        <li>
-          <a href="#"><iconify-icon icon="devicon:facebook"></iconify-icon></a>
+        <li class="redes">
+          <a class="enlace-redes" href="#"
+            ><iconify-icon
+              class="footer-icon"
+              icon="devicon:facebook"
+            ></iconify-icon
+          ></a>
         </li>
       </ul>
 
