--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -88,7 +88,7 @@
     </header>
     <main class="main-reservas">
       <section class="form-container">
-        <h1 class="form-1 titulo">Hace tu reserva</h1>
+        <h1 class="form-1 titulo-reservas">Hace tu reserva</h1>
         <div class="form-datos">
           <form class="formulario">
             <div class="form-2 desde">
@@ -203,7 +203,7 @@
           </form>
 
           <div class="informacion">
-            <h3>Contacto</h3>
+            <h3 class="titulo-reservas">Contacto</h3>
             <ul>
               <li>
                 <iconify-icon icon="line-md:map-marker-filled"></iconify-icon>
@@ -215,7 +215,7 @@
               </li>
               <li>
                 <iconify-icon icon="fontisto:email"></iconify-icon>
-                elisium.b@hotel.com
+                elisium@hotel.com
               </li>
             </ul>
           </div>
