cambios en servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -88,10 +88,11 @@
       </nav>
     </header>
     <main class="main-servicios">
-      <h1>SERVICIOS</h1>
+      <h1 class="titulo-servicios">SERVICIOS</h1>
 
       <img
-        src="../multimedia/fotos/hotel-1.jpg"
+        class="servicios-img"
+        src="../multimedia/fotos/portada-servicios.jpg"
         alt="foto-con-vista-hacia-el-oceano"
       />
       <div class="border"></div>
