cambio de imagenes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -95,7 +95,7 @@
         <div class="comienzos">
           <img
             class="img-antes"
-            src="../multimedia/carrusel/WhatsApp Image 2024-01-13 at 17.30.37.jpeg"
+            src="../multimedia/carrusel/antess-nosotros.jpg"
             alt="imagen-de-los-comienzos-del-hotel"
           />
 
