cambio de imagenes y bordes

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -24,8 +24,9 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../styles/index.css" />
+    <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/main.css" />
+
     <title>ELYSIUM</title>
   </head>
   <header>
@@ -86,17 +87,17 @@
     <section class="container-galeria">
       <div class="galeria-img">
         <img
-          class="card-back"
-          src="../multimedia/fotos/reposera-1.jpg"
-          alt="area-de-relax"
-        />
-        <img
           class="card-front"
           src="../multimedia/fotos/reposera-2.jpg"
           alt="area-de-relax"
         />
-        <!-- <p>RELAX</p> -->
+        <img
+          class="card-back"
+          src="../multimedia/fotos/reposera-1.jpg"
+          alt="area-de-relax"
+        />
       </div>
+
       <div class="galeria-img">
         <img
           class="card-front"
@@ -108,7 +109,6 @@
           src="../multimedia/fotos/desayuno-2.jpg"
           alt="servicio-de-desayuno-artesanal"
         />
-        <!-- <p>DESAYUNO ARTESANAL</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -121,12 +121,11 @@
           src="../multimedia/fotos/spa-2.jpg"
           alt="sala-de-spa"
         />
-        <!-- <p>SPA</p> -->
       </div>
       <div class="galeria-img">
         <img
           class="card-front"
-          src="../multimedia/fotos/habit-1.jpg"
+          src="../multimedia/fotos/habit-1.jpeg"
           alt="area-de-masajes"
         />
         <img
@@ -134,12 +133,11 @@
           src="../multimedia/fotos/habit-2.jpg"
           alt="area-de-masajes"
         />
-        <!-- <p>HABITACIONES</p> -->
       </div>
       <div class="galeria-img">
         <img
           class="card-front"
-          src="../multimedia/fotos/comedor.jpg"
+          src="../multimedia/fotos/comedor-1.jpeg"
           alt="restaurant-desayuno-almuerzo"
         />
         <img
@@ -147,7 +145,6 @@
           src="../multimedia/fotos/comedor-2.jpg"
           alt="restaurant-desayuno-almuerzo"
         />
-        <!-- <p>RESTAURANT</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -160,7 +157,6 @@
           src="../multimedia/fotos/hotel-1.jpg"
           alt="imagenes-del-complejo"
         />
-        <!-- <p>COMPLEJO</p> -->
       </div>
       <div class="galeria-img">
         <img
@@ -173,25 +169,23 @@
           src="../multimedia/fotos/buceo-2.jpg"
           alt="imagenes-de-las-actividades-acuaticas"
         />
-        <!-- <p>ACTIVIDADES</p> -->
       </div>
       <div class="galeria-img">
         <img
           class="card-back"
-          src="../multimedia/fotos/piscina-1.jpg"
+          src="../multimedia/fotos/WhatsApp Image 2024-01-15 at 16.26.02.jpeg"
           alt="desayuno-artesanal"
         />
         <img
           class="card-front"
-          src="../multimedia/fotos/piscina-2.jpg"
+          src="../multimedia/fotos/WhatsApp Image 2024-01-15 at 16.19.06.jpeg"
           alt="imagen-de-la-piscina"
         />
-        <!-- <p>PISCINA</p> -->
       </div>
       <div class="galeria-img">
         <img
           class="card-front"
-          src="../multimedia/fotos/vista-al-mar-2.jpg"
+          src="../multimedia/fotos/piscina-noche.jpg"
           alt="desayuno-artesanal"
         />
         <img
@@ -199,7 +193,6 @@
           src="../multimedia/fotos/vista-al-mar-1.jpeg"
           alt="imagen-de-la-piscina"
         />
-        <!-- <p>SERVICIOS</p> -->
       </div>
     </section>
   </main>
