arreglos en formulario

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -200,28 +200,28 @@
     <h5 class="footer-subtitulo">NUESTRAS REDES SOCIALES</h5>
     <ul class="footer-redes">
       <li class="redes">
-        <a class="enlace-redes" href="#"
-          ><iconify-icon
+        <a class="enlace-redes" href="#">
+          <iconify-icon
             class="footer-icon"
             icon="skill-icons:twitter"
-          ></iconify-icon
-        ></a>
+          ></iconify-icon>
+        </a>
       </li>
       <li class="redes">
-        <a class="enlace-redes" href="#"
-          ><iconify-icon
+        <a class="enlace-redes" href="#">
+          <iconify-icon
             class="footer-icon"
             icon="skill-icons:instagram"
-          ></iconify-icon
-        ></a>
+          ></iconify-icon>
+        </a>
       </li>
       <li class="redes">
-        <a class="enlace-redes" href="#"
-          ><iconify-icon
+        <a class="enlace-redes" href="#">
+          <iconify-icon
             class="footer-icon"
             icon="devicon:facebook"
-          ></iconify-icon
-        ></a>
+          ></iconify-icon>
+        </a>
       </li>
     </ul>
 
