--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -116,7 +116,7 @@
         <div class="actualidad">
           <img
             class="img-actualidad"
-            src="../multimedia/fotos/piscina-2.jpg"
+            src="../multimedia/fotos/piscina-2.jpeg"
             alt="imagen-de-como-se-ve-en-la-actualidad-el-hotel"
           />
 
